--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -4,12 +4,22 @@
 <head>
     <title>To-Do lists</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="../static/base.css" rel="stylesheet" media="screen">
+    <link href="../../superlists/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="../../superlists/static/base.css" rel="stylesheet" media="screen">
 </head>
 
 <body>
     <div class="container">
+
+        <nav class="navbar navbar-default" role="navigation">
+            <a class="navbar-brand" href="/">Superlists</a>
+            {% if user.email %}
+                <a class="btn navbar-btn navbar-right" id="id_logout" href="#">Log out</a>
+                <span class="navbar-text navbar-right">Logged in as {{ user.email }}</span>
+            {% else %}
+                <a class="btn navbar-btn navbar-right" id="id_login" href="#">Sign in</a>
+            {% endif %}
+        </nav>
 
         <div class="row">
             <div class="col-md-6 col-md-offset-3 jumbotron">
@@ -36,6 +46,20 @@
         </div>
     </div>
     <script src="http://code.jquery.com/jquery.min.js"></script>
-    <script src="/static/list.js"></script>
-</body>
+    <script src="https://login.persona.org/include.js"></script>
+    <script src="../static/accounts.js"></script>
+    <script src="../static/list.js"></script>
+    <script>
+        /*global $, Superlists, navigator */
+        $(document).ready(function () {
+            var user = "{{ user.email }}" || null;
+            var token = "{{ csrf_token }}";
+            var urls = {
+                login: "{% url 'persona_login' %}",
+                logout: "TODO",
+            };
+            Superlists.Accounts.initialize(navigator, user, token, urls);
+        });
+    </script>
+    </body>
 </html>
